--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "env-cmd -f ./config/production.env node src/index",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
+    "start": "env-cmd -f ./config/production.env node index",
+    "dev": "env-cmd -f ./config/dev.env nodemon index.js",
     "test": "env-cmd ./config/test.env jest --watch --runInBand"
   },
   "author": "George Sklavos",
