--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "env-cmd -f ./config/production.env node index",
+    "start": "node index",
+    "startLocal": "env-cmd -f ./config/production.env node index",
     "dev": "env-cmd -f ./config/dev.env nodemon index.js",
     "test": "env-cmd ./config/test.env jest --watch --runInBand"
   },
